--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "notion-api",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "bin": {
+    "type-cli": "dist/type-cli.cjs"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx ./src/index.ts",
+    "type": "tsx ./script/type-cli.ts"
   },
   "keywords": [],
   "author": "hansolbangul",
@@ -13,6 +18,7 @@
   "packageManager": "pnpm@9.9.0",
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.10.1",
     "@typescript-eslint/eslint-plugin": "^8.16.0",
     "@typescript-eslint/parser": "^8.16.0",
     "eslint": "^9.15.0",
@@ -21,7 +27,9 @@
     "prettier": "^3.4.1",
     "rollup": "^4.27.4",
     "rollup-plugin-typescript2": "^0.36.0",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0"
   },
