--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-cli": "dist/type-cli.cjs"
   },
   "scripts": {
+    "build": "rollup -c",
     "start": "tsx ./src/index.ts",
     "type": "tsx ./script/type-cli.ts"
   },
